...
    }

    return (
      <SafeAreaView style={styles.browse_container}>
        <ScrollView
          style={styles.scrollView}
          testID={'BrowseView_detox'}
          contentContainerStyle={styles.scrollViewCellContainer}>
          {this.state.petArray.map((pet, index) => {
            const petReport = pet.report;

            const date = new Date(petReport.report_date);

...

            const dateString = date.toLocaleString('en-US');

            return (
              <View
                style={styles.scrollViewCell}
                testID={'ScrollViewCell_detox'}
                key={index}>
                <Text style={styles.titleText}>
                  {' '}
                  {`Similarity: ${
                    ((pet['total score'] * 100) / 4).toFixed(0) + '%'
                  }`}{' '}
...
